--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@trendyol-js/react-carousel": "^3.0.0",
     "antd": "^4.23.1",
     "bootstrap": "^5.2.1",
+    "flickity": "^2.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-countdown": "^2.3.2",
     "react-dom": "^18.2.0",
+    "react-flickity-component": "^3.6.3",
     "react-icons": "^4.4.0",
     "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
