--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
@@ -10,6 +11,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^2.0.11",
+    "@lyket/react": "^1.4.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,17 +19,22 @@
     "antd": "^4.23.1",
     "bootstrap": "^5.2.1",
     "flickity": "^2.3.0",
+    "mdb-react-ui-kit": "^4.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-countdown": "^2.3.2",
     "react-dom": "^18.2.0",
     "react-flickity-component": "^3.6.3",
     "react-icons": "^4.4.0",
+    "react-loading-skeleton": "^3.1.0",
+    "react-redux": "^8.0.4",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "redux": "^4.2.0",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.6",
     "swiper": "^8.4.2",
     "web-vitals": "^2.1.4"
   },
