--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^2.0.11",
     "@lyket/react": "^1.4.8",
+    "@stripe/react-stripe-js": "^1.13.0",
+    "@stripe/stripe-js": "^1.41.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@trendyol-js/react-carousel": "^3.0.0",
     "antd": "^4.23.1",
+    "axios": "^1.1.3",
     "bootstrap": "^5.2.1",
     "flickity": "^2.3.0",
     "mdb-react-ui-kit": "^4.2.0",
@@ -65,6 +68,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.16",
+    "sass": "^1.55.0",
     "tailwindcss": "^3.1.8"
   }
 }
