--- a/package.json
+++ b/package.json
@@ -3,43 +3,43 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^4.7.0",
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-brands-svg-icons": "^6.2.0",
-    "@fortawesome/free-regular-svg-icons": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@ant-design/icons": "^5.0.1",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@headlessui/react": "^1.7.2",
-    "@heroicons/react": "^2.0.11",
-    "@lyket/react": "^1.4.8",
-    "@stripe/react-stripe-js": "^1.13.0",
-    "@stripe/stripe-js": "^1.41.0",
+    "@headlessui/react": "^1.7.9",
+    "@heroicons/react": "^2.0.14",
+    "@lyket/react": "^2.1.0",
+    "@stripe/react-stripe-js": "^1.16.4",
+    "@stripe/stripe-js": "^1.46.0",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@trendyol-js/react-carousel": "^3.0.0",
-    "antd": "^4.23.1",
-    "axios": "^1.1.3",
-    "bootstrap": "^5.2.1",
-    "flickity": "^2.3.0",
-    "mdb-react-ui-kit": "^4.2.0",
+    "antd": "^5.1.7",
+    "axios": "^1.3.2",
+    "bootstrap": "^5.2.3",
+    "flickity": "^3.0.0",
+    "mdb-react-ui-kit": "^5.1.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.5.0",
-    "react-countdown": "^2.3.2",
+    "react-bootstrap": "^2.7.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
-    "react-flickity-component": "^3.6.3",
-    "react-icons": "^4.4.0",
+    "react-flickity-component": "^4.0.1",
+    "react-icons": "^4.7.1",
     "react-loading-skeleton": "^3.1.0",
-    "react-redux": "^8.0.4",
+    "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.4.0",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.8.0",
+    "react-scripts": "^2.1.3",
     "react-slick": "^0.29.0",
-    "redux": "^4.2.0",
+    "redux": "^4.2.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
-    "swiper": "^8.4.2",
-    "web-vitals": "^2.1.4"
+    "swiper": "^9.0.2",
+    "web-vitals": "^3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -66,9 +66,9 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.8",
-    "postcss": "^8.4.16",
-    "sass": "^1.55.0",
-    "tailwindcss": "^3.1.8"
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "sass": "^1.58.0",
+    "tailwindcss": "^3.2.4"
   }
 }
